[package]
name = "turtle-shell-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bcrypt = "0.15.0"
chrono = "0.4.33"
futures-channel = "0.3.30"
futures-util = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "macros"] }
sqlx-cli = "0.7.3"
tokio = { version = "1.35.1", features = ["full"] }
tokio-postgres = "0.7.10"
tokio-tungstenite = { version = "0.21.0" }
turtle-protocol = { git = "ssh://git@gitlab.com/level9turtles/turtle_chat/turtle-protocol.git", version = "0.1.6" }
#turtle-protocol = { path = "../turtle-protocol" }
rand = "0.8.5"
futures = "0.3.30"
flamegraph = "0.6.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = false
